Link in the readme

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 This is a talk for the BFPG on the 2013-07-23. It covers a broad area of topics, ranging from what FP is and why you'd want to go to the trouble of using such abstractions.
 
-This is the reveal js source content of the slides. You probably want to go here: whyfp.benkolera.com or view the pdf slides.
+This is the reveal js source content of the slides. You probably want to go here: http://whyfp.benkolera.com or view the pdf slides.
 
